# YOWOFOrmer-Spatiotemporal-Transformer-base

./: .gitignore  README.md  evaluate.py  pyproject.toml  train.py  visualize.py
config/: yolov11_videomae.yaml
yowoformer/: __init__.py
yowoformer/datasets/: build.py  transforms.py
yowoformer/datasets/ava/: load_data.py
yowoformer/datasets/ucf/: load_data.py
yowoformer/evaluator/: eval.py
yowoformer/model/: yowoformer.py
yowoformer/model/backbone2d/: __init__.py  build.py
yowoformer/model/backbone3d/: __init__.py  build.py  videomae_advanced.py
yowoformer/model/fusion/: __init__.py  bstf.py  bstf_v2.py  build.py
yowoformer/model/head/: dfl.py
yowoformer/utils/: flops.py  loss.py
